# yako

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  roly.yaml  tox.toml  yako.yaml
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md
.github/workflows/: ci.yml  docker.yml  publish.yml  pypi.yml
roles/show-vars/defaults/: main.yaml
roles/show-vars/tasks/: main.yaml
scripts/: entrypoint.sh
src/roly/: ansible.py  ansible_config.py  assert_check.py  config.py  consts.py  given.py  plugin_cli.py  repo.py  report.py  resolve.py  single_runner.py  test_case.py  test_module.py  utils.py
src/roly/cli/: main.py
src/roly/plugins/callback/: roly_callback.py
src/roly/plugins/module/: roly_assert.py  roly_mock.py
src/roly/runner/: docker_case_runner.py  docker_runner.py  local_case_runner.py  local_runner.py  runner.py  single_docker.py  single_runner.py  test_runner.py  utils.py
src/yako/: ansible.py  assert_check.py  config.py  consts.py  given.py  plugin_cli.py  repo.py  report.py  resolve.py  test_case.py  test_module.py  yaml.py
src/yako/cli/: main.py
src/yako/plugins/callback/: yako_callback.py
src/yako/plugins/module/: yako_assert.py  yako_mock.py
src/yako/runner/: docker_case_runner.py  local_case_runner.py  runner.py  utils.py
tests/: test_assert_check.py
tests/integration/: test_callabck_plugin.py  utils.py
tests/integration/callback_plugin_playbooks/: hello.yaml  hello_test_case.yaml
tests/integration/test_callback_plugin/: test_assert_input.yaml  test_assert_input_fail.yaml  test_assert_output.yaml  test_assert_output_fail.yaml  test_copy_file_basic.yaml  test_copy_file_dir.yaml  test_given_extra.yaml  test_hello.yaml  test_mock_basic.yaml  test_mock_changed.yaml  test_mock_custom_action.yaml  test_should_be_changed.yaml  test_should_be_changed_failed.yaml  test_should_be_skipped.yaml  test_should_be_skipped_failed.yaml  test_should_fail.yaml  test_should_fail_failed.yaml  test_task_extra_vars.yaml
tests/roly/: test_basic.yaml  test_mock_basic.yaml  test_mock_changed.yaml
tests/unit/: test_ansible.py  test_ansible_config.py  test_assert_check.py  test_config.py  test_given.py
tests/unit/plugin/module/: test_roly_assert.py  test_roly_mock.py  test_yako_assert.py  test_yako_mock.py  utils.py
tests/yako/: test_assert_input_output.yaml  test_basic.yaml  test_copy_file.yaml  test_give_extra_vars.yaml  test_given_extra_vars.yaml  test_given_module.yaml  test_hello.yaml  test_include_roles.yaml  test_includes.yaml  test_mock.yaml  test_mock_changed.yaml  test_roles.yaml  test_should_attrs.yaml
tests/yako/includes/: case_en.yaml  case_fr.yaml  case_jp.yaml  global_given.yaml
tests/yako/playbooks/: hello.yaml
