[project]
name = "roly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=12.1.0",
    "diskcache>=5.6.3",
    "gitpython>=3.1.45",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "rick>=0.8.0",
    "typer>=0.20.0",
    "typing-extensions>=4.15.0",
]

[project.scripts]
roly = "roly.cli.main:main"

[tool.uv.workspace]
members = [
    "temp",
]

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "ANN001", # https://docs.astral.sh/ruff/rules/missing-type-function-argument
    "ANN002", # https://docs.astral.sh/ruff/rules/missing-type-args
    "ANN003", # https://docs.astral.sh/ruff/rules/missing-type-kwargs
    "ANN201", # https://docs.astral.sh/ruff/rules/missing-return-type-undocumented-public-function
    "ANN202", # https://docs.astral.sh/ruff/rules/missing-return-type-private-function
    "ANN204", # https://docs.astral.sh/ruff/rules/missing-return-type-special-method
    "ANN205", # https://docs.astral.sh/ruff/rules/missing-return-type-static-method
    "ANN401", # https://docs.astral.sh/ruff/rules/any-type/
    "ARG002", # https://docs.astral.sh/ruff/rules/unused-method-argument/
    "D100", # https://docs.astral.sh/ruff/rules/undocumented-public-module
    "D101", # https://docs.astral.sh/ruff/rules/undocumented-public-class
    "D102", # https://docs.astral.sh/ruff/rules/undocumented-public-method
    "D103", # https://docs.astral.sh/ruff/rules/undocumented-public-function
    "D104", # https://docs.astral.sh/ruff/rules/undocumented-public-package
    "D105", # https://docs.astral.sh/ruff/rules/undocumented-magic-method
    "D106", # https://docs.astral.sh/ruff/rules/undocumented-public-nested-class
    "D107", # https://docs.astral.sh/ruff/rules/undocumented-public-init
    "D203",
    "D211",
    "D212",
    "D213",
    "COM812",
    "D404", # https://docs.astral.sh/ruff/rules/docstring-starts-with-this
    "DTZ011", # https://docs.astral.sh/ruff/rules/call-date-today
    "EM101", # https://docs.astral.sh/ruff/rules/raw-string-in-exception
    "FBT001", # https://docs.astral.sh/ruff/rules/boolean-type-hint-positional-argument
    "FBT002", # https://docs.astral.sh/ruff/rules/boolean-default-value-positional-argument
    "FBT003", # https://docs.astral.sh/ruff/rules/boolean-positional-value-in-call
    "FIX001", # https://docs.astral.sh/ruff/rules/line-contains-fixme
    "FIX002", # https://docs.astral.sh/ruff/rules/line-contains-todo
    "PLR0913", # https://docs.astral.sh/ruff/rules/too-many-arguments
    "PLR2004", # https://docs.astral.sh/ruff/rules/magic-value-comparison
    "S603", # https://docs.astral.sh/ruff/rules/subprocess-without-shell-equals-true
    "S604", # Function call with `shell=True` parameter identified
    "S605", #  https://docs.astral.sh/ruff/rules/start-process-with-a-shell
    "S607", # https://docs.astral.sh/ruff/rules/start-process-with-partial-path
    "T201", # https://docs.astral.sh/ruff/rules/print
    "TD002", # https://docs.astral.sh/ruff/rules/missing-todo-author
    "TD003", # https://docs.astral.sh/ruff/rules/missing-todo-link
    "TRY003", # https://docs.astral.sh/ruff/rules/raise-vanilla-args
    # "D212", # https://docs.astral.sh/ruff/rules/multi-line-summary-first-line/
    # "D400", # https://docs.astral.sh/ruff/rules/ends-in-period
    # "D401", # https://docs.astral.sh/ruff/rules/non-imperative-mood
    # "D415", # https://docs.astral.sh/ruff/rules/ends-in-punctuation
    # "DTZ006", # https://docs.astral.sh/ruff/rules/call-datetime-fromtimestamp
    # "DTZ007", # https://docs.astral.sh/ruff/rules/call-datetime-strptime-without-zone
    # "E501", # https://docs.astral.sh/ruff/rules/line-too-long
    # "SIM102", # https://docs.astral.sh/ruff/rules/collapsible-if
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]    # Use assert for test files

[tool.mypy]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "inline-snapshot>=0.31.1",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.4",
]

[tool.pytest.ini_options]
markers = ["integration",]
